--- a/css/quidditch.css
+++ b/css/quidditch.css
@@ -1,6 +1,6 @@
 body {
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: auto;
   background-color: rgb(2, 16, 29);
 }
 
