--- a/css/breaking-news.css
+++ b/css/breaking-news.css
@@ -44,3 +44,35 @@ h2 {
   border-radius: 8px 0 8px 0;
   display: inline-block;
 }
+
+#new-magical-beast-artical {
+  color: white;
+  font-size: large;
+  width: 2070px;
+  height: 700px;
+  padding: 2px 10px;
+  border: 2px solid darkorange;
+  border-radius: 20px;
+  margin: 150px 0 0 200px;
+}
+
+#four-dragons-loose-article {
+  color: white;
+  font-size: large;
+  width: 2070px;
+  height: 700px;
+  padding: 2px 10px;
+  border: 2px solid darkorange;
+  border-radius: 20px;
+  margin: 50px 0 0 200px;
+}
+#gringotts-article {
+  color: white;
+  font-size: large;
+  width: 2070px;
+  height: 700px;
+  padding: 2px 10px;
+  border: 2px solid darkorange;
+  border-radius: 20px;
+  margin: 50px 0 150px 200px;
+}
