setting things up for page 4

--- a/css/breaking-news.css
+++ b/css/breaking-news.css
@@ -30,6 +30,10 @@ a:visited {
     color: red:
 }
 
+#breaking-news-article-3 h2:hover{
+    color:red;
+}
+
 .breaking-news-1 {
   margin-top: 600px;
 }
