--- a/css/witches-little-helper.css
+++ b/css/witches-little-helper.css
@@ -1,7 +1,7 @@
 body {
   background-repeat: no-repeat;
   background-size: auto;
-  background-color: rgb(2, 16, 29);
+  background-color: rgb(0, 0, 0);
 }
 
 h2 {
@@ -9,7 +9,7 @@ h2 {
 }
 
 .main-nav {
-  background-color: rgb(2, 42, 75);
+  background-color: rgb(13, 9, 48);
   color: rgb(103, 147, 214);
   width: 2560px;
 }
@@ -28,29 +28,22 @@ h2 {
   text-decoration: none;
 }
 
-#cauldron-video{
+#cauldron-video {
   margin: 50px 0 0 900px;
-  color:rgb(138, 150, 161);
+  color: rgb(138, 150, 161);
 }
 
-#de-gnome{
-  width: 1000px;
-  height: 200px;
-  background-color: rgb(92, 61, 231);
-  margin: 60px 0 0 300px;
-  padding: 10px 5px 5px 20px;
-  border: 2px solid rgb(131, 129, 247);
-  border-radius: 8px;
-  display: inline-block;
+#potion-1 {
+  margin: 20px 0 100px 1600px;
+  width: 300px;
 }
 
-#love-potion{
-  width: 1000px;
-  height: 200px;
-  background-color: rgb(92, 61, 231);
-  margin: 60px 0 0 300px;
-  padding: 10px 5px 5px 20px;
-  border: 2px solid rgb(131, 129, 247);
-  border-radius: 8px;
-  display: inline-block;
+#potions-2 {
+  margin: 10px 0 0 1030px;
+  width: 300px;
+}
+
+#potions-3 {
+  margin: 20px 0 50px 200px;
+  width: 300px;
 }
