--- a/css/www.css
+++ b/css/www.css
@@ -27,3 +27,63 @@ h2 {
   color: white;
   text-decoration: none;
 }
+
+.flex-container-1 {
+  width: 400px;
+  padding-top: 10px;
+  margin-left: 30px;
+  color: rgb(209, 144, 59);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  background-color: rgba(66, 64, 202, 0.575);
+}
+
+.flex-container-1__img{
+  transform: translateX(50px);
+}
+
+.flex-container-1:hover{
+  transform: scale(1.2);
+}
+
+.flex-container-2 {
+  width: 400px;
+  padding-top: 10px;
+  margin-left: 430px;
+  color: rgb(209, 144, 59);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  background-color: rgba(66, 64, 202, 0.575);
+}
+
+.flex-container-2__img{
+  transform: translateX(50px);
+}
+
+.flex-container-2:hover{
+  transform: scale(1.2);
+}
+
+.flex-container-3 {
+  width: 400px;
+  padding-top: 10px;
+  margin-left: 430px;
+  color: rgb(209, 144, 59);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  background-color: rgba(66, 64, 202, 0.575);
+}
+
+.flex-container-3__img{
+  transform: translateX(50px);
+}
+
+.flex-container-3:hover{
+  transform: scale(1.2);
+}
