--- a/css/witches-little-helper.css
+++ b/css/witches-little-helper.css
@@ -35,17 +35,28 @@ h2:hover {
   text-decoration: none;
 }
 
-.open-chest__openimg {
- transform: translateY(-600px);
+.object-behind-chest {
+  margin-left: 40px;
+  transform: translateY(-400px);
 }
 
+.open-chest__openimg {
+ position: absolute;
+ z-index: 2;
+}
 
 .open-chest__openimg:hover {
-  transform: rotateY(40deg);
+  transform: rotateY(90deg);
   transform-origin: 0;
-  transition: transform 500ms;
+  transition: transform 800ms;
 }
 
+.img-behind {
+  position: absolute;
+  z-index: -1;
+  padding-top: 60px;
+  transform: translateX(80px);
+}
 
 #cauldron-video {
   margin: 50px 0 0 900px;
@@ -54,7 +65,7 @@ h2:hover {
 
 .article-set-up {
   width: 450px;
-  margin: 10px 0 50px 20px;
+  margin: 10px 0 50px 200px;
   padding: 5px;
   border: 2px solid plum;
   border-radius: 8px;
@@ -64,7 +75,6 @@ h2:hover {
 
 .article-set-up:hover {
   scale: 1.2;
-
 }
 
 #article-2 {
