add a feature to main page

--- a/css/style.css
+++ b/css/style.css
@@ -28,4 +28,35 @@ h2 {
   text-decoration: none;
 }
 
+.article-one {
+  position: relative;
+  width: 379px;
+  height: 216px;
+  margin-left: 340px;
+  transform: translateY(280px);
+  border: 1px solid #022a4b;
+}
 
+.article-one__img {
+  position: absolute;
+  z-index: 2;
+}
+
+.article-one__img:hover {
+  transform: rotateY(90deg);
+  transform-origin: 0;
+  transition: transform 500ms;
+}
+
+.article-one__text {
+  position: absolute;
+  z-index: 1;
+  width: 340px;
+  height: 150px;
+  color: white;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(2, 42, 75);
+}
