--- a/css/www.css
+++ b/css/www.css
@@ -27,3 +27,37 @@ h2 {
   color: white;
   text-decoration: none;
 }
+
+.container {
+  transform: translateX(500px);
+  margin-top: 100px;
+}
+
+.container-1 {
+  transform: translateX(700px);
+  margin-top: 100px;
+}
+
+@keyframes full-rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(45deg);
+  }
+  50% {
+    transform: rotate(90deg);
+  }
+  75% {
+    transform: rotate(135deg);
+  }
+  100% {
+    transform: rotate(180deg);
+  }
+}
+
+.animationTwo {
+  width: 200px;
+  height: 200px;
+  animation: full-rotate 2s 3s 5 alternate-reverse;
+}
