--- a/css/hogwarts.css
+++ b/css/hogwarts.css
@@ -31,7 +31,7 @@ h2 {
 h1 {
   color: antiquewhite;
   text-align: center;
-  margin-top: 300px;
+  margin-top: 100px;
 }
 
 p {
@@ -40,7 +40,7 @@ p {
   background-color: rgb(226, 127, 61);
   padding-top: 50px;
   width: 220px;
-  height: 220px;
+  height: 180px;
   border: 2px solid darkorange;
   position: absolute;
   z-index: 2;
@@ -48,6 +48,7 @@ p {
 
 img {
   position: absolute;
+  padding-top: 30px;
   z-index: 1;
 }
 
@@ -60,38 +61,22 @@ img {
   z-index: 2;
 }
 
-@keyframes disappear {
-  0% { opacity: 1; }
-  100% { opacity: 0; }
-}
-
-#card-text:hover {
-  animation-name: disappear;
-  animation-duration: 10s; /
-}
-
 .card-text:hover {
-  transform-origin: 0;
+  transform-origin: 50;
   visibility: hidden;
   animation-duration: 20sec;
 }
 
-.first-card {
-  margin: 20px 0 20px 200px;
+.flex-container-memory-cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
-.first-card__text {
-  transform: translateY(-50px);
+.second-row {
+  transform: translateY(400px);
 }
 
-.second-card {
-  margin: 50px 0 50px 700px;
-}
-
-.second-card__text {
-  transform: translateY(-50px);
-}
-
-.third-card {
-  margin: 100px 0 100px 1000px;
+.third-row {
+  transform: translateY(800px);
 }
