--- a/css/hogwarts.css
+++ b/css/hogwarts.css
@@ -86,7 +86,7 @@ img {
 
 .ghost-horseman {
   transform: translateX(-130px);
-  animation: transform ease-in-out 3000ms 1;
+  animation: transform 3000ms 1;
 }
 
 @keyframes transform {
