--- a/css/hogwarts.css
+++ b/css/hogwarts.css
@@ -86,23 +86,14 @@ img {
 
 .ghost-horseman {
   transform: translateX(-130px);
-  animation: transform 3000ms 1;
+  animation: transform 3000ms ease-in 1;
 }
 
 @keyframes transform {
-  0% {
-    transform: translateX(0);
+  from {
+    transform: translateX(0px);
   }
-  25% {
-    transform: translateX(200px);
-  }
-  50% {
-    transform: translateX(400px);
-  }
-  75% {
-    transform: translateX(600px);
-  }
-  100% {
-    transform: translateX(800px);
+  to {
+    transform: translateX(2000px);
   }
 }
