--- a/css/fanstastic-beasts.css
+++ b/css/fanstastic-beasts.css
@@ -1,6 +1,6 @@
 body {
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: auto;
   background-color: #6b8eac;
 }
 
@@ -27,8 +27,8 @@ h1:hover {
 
 .niffler-hide {
   position: relative;
-  transform: translateY(1600px);
-  margin: 20px 0 100px 800px;
+  transform: translateY(1400px);
+  margin: 0 0 20px 200px;
 }
 
 .niffler-hide__img1 {
@@ -50,14 +50,13 @@ h1:hover {
 
 .bowtruckle-hide {
   position: relative;
-  transform: translateY(572px);
-  margin: 0 0 20px 862px;
+  transform: translateY(550px);
+  margin: 0 0 20px 804px;
 }
 
 .bowtruckle-hide__img1 {
   position: absolute;
   z-index: 2;
-  width: 620px;
 }
 
 .bowtruckle-hide__img1:hover {
