--- a/css/quidditch.css
+++ b/css/quidditch.css
@@ -1,6 +1,6 @@
 body {
   background-repeat: no-repeat;
-  background-size: auto;
+  background-size: cover;
   background-color: rgb(2, 16, 29);
 }
 
@@ -8,29 +8,10 @@ h2 {
   text-decoration: underline;
 }
 
-.main-nav {
-  background-color: rgb(2, 42, 75);
-  color: rgb(103, 147, 214);
-  width: 2568px;
-}
-
-.main-nav ul {
-  list-style: none;
-}
-
-.main-nav li {
-  display: inline-block;
-  margin: 20px 50px;
-}
-
-.main-nav a {
-  color: white;
-  text-decoration: none;
-}
 
 #quidditch-finale-game {
   margin: 50px 0 0 900px;
-  color: rgb(50, 94, 22);
+  color: rgb(26, 39, 18);
   width: 900px;
   font-size: larger;
 }
@@ -53,7 +34,7 @@ h2 {
 
 .quidditch-scores {
   margin: 620px 0 80px 950px;
-  color: rgb(15, 78, 78);
+  color: rgb(6, 26, 26);
   width: 750px;
   font-size: larger;
 }
