--- a/css/hogwarts.css
+++ b/css/hogwarts.css
@@ -92,6 +92,16 @@ img {
   margin-left: 500px;
   background-image: url(../images/riddle.jpg);
   background-repeat: no-repeat;
-  width: 600px;
-  height: 1000px;
+  width: 1000px;
+  height: 1400px;
+}
+
+.riddle__input {
+  margin-top: 200px;
+  margin-left: 10px;
+}
+
+#greeting {
+  color: rgb(243, 241, 241);
+  font-size: 1.2rem;
 }
